@@ -1,7 +1,7 @@
 #  File src/library/base/R/format.R
 #  Part of the R package, http://www.R-project.org
 #
-#  Copyright (C) 1995-2012 The R Core Team
+#  Copyright (C) 1995-2013 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -223,25 +223,25 @@ format.data.frame <- function(x, ..., justify = "none")
     nr <- .row_names_info(x, 2L)
     nc <- length(x)
     rval <- vector("list", nc)
-    for(i in 1L:nc)
+    for(i in seq_len(nc))
 	rval[[i]] <- format(x[[i]], ..., justify = justify)
     lens <- sapply(rval, NROW)
     if(any(lens != nr)) { # corrupt data frame, must have at least one column
 	warning("corrupt data frame: columns will be truncated or padded with NAs")
-	for(i in 1L:nc) {
+	for(i in seq_len(nc)) {
 	    len <- NROW(rval[[i]])
 	    if(len == nr) next
 	    if(length(dim(rval[[i]])) == 2L) {
 		rval[[i]] <- if(len < nr)
 		    rbind(rval[[i]], matrix(NA, nr-len, ncol(rval[[i]])))
-		else rval[[i]][1L:nr,]
+		else rval[[i]][seq_len(nr),]
 	    } else {
 		rval[[i]] <- if(len < nr) c(rval[[i]], rep.int(NA, nr-len))
-		else rval[[i]][1L:nr]
+		else rval[[i]][seq_len(nr)]
 	    }
 	}
     }
-    for(i in 1L:nc) {
+    for(i in seq_len(nc)) {
 	if(is.character(rval[[i]]) && inherits(rval[[i]], "character"))
 	    oldClass(rval[[i]]) <- "AsIs"
     }
@@ -267,7 +267,7 @@ format.AsIs <- function(x, width = 12, ...)
     if(is.null(width)) width = 12L
     n <- length(x)
     rvec <- rep.int(NA_character_, n)
-    for(i in 1L:n) {
+    for(i in seq_len(n)) {
         y <- x[[i]]
         ## need to remove class AsIs to avoid an infinite loop.
         cl <- oldClass(y)
